# SMC_ZeroClaw_Design

./: AGENTS.md  README.md  pyproject.toml
sql/: 001_create_core_tables.sql
src/zeroclaw/: __init__.py  cli.py  db.py  formatters.py  models.py
tests/: test_formatters.py
